# tauri-play

./: .gitignore  CHANGES.md  LICENSE  README.md  generate-icon.py  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: gdrive.rs  home.rs  library.rs  mod.rs  playback.rs  playlist.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/models/: media_item.rs  mod.rs  playlist.rs  playlist_entry.rs
src-tauri/src/providers/: local.rs  mod.rs  traits.rs
src-tauri/src/providers/gdrive/: api.rs  mod.rs  oauth.rs  provider.rs
src-tauri/src/server/: artwork.rs  mod.rs  streaming.rs
src-tauri/src/services/: cache.rs  gdrive_cache.rs  library.rs  metadata.rs  mod.rs  playback.rs  playlist.rs  sync.rs  waveform.rs
src/api/: commands.ts
src/components/: ConfirmDialog.tsx  ContextMenu.tsx  Home.tsx  Layout.tsx  Library.tsx  LibraryGrid.tsx  NowPlayingPanel.tsx  Player.tsx  PlaylistSidebar.tsx  PlaylistView.tsx  QueueView.tsx  ScanProgressModal.tsx  Settings.tsx  Sidebar.tsx  Waveform.tsx
src/components/home/: AlbumCard.tsx  HorizontalScroller.tsx  QuickActions.tsx  ResumeCard.tsx  SuggestionCard.tsx
src/stores/: homeStore.ts  libraryStore.ts  playbackStore.ts  playlistStore.ts  themeStore.ts
src/styles/: index.css
src/types/: index.ts
