[package]
name = "tauri-media-player"
version = "0.3.0"
edition = "2021"

[lib]
name = "tauri_media_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
oauth2 = "4"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
mime_guess = "2"
log = "0.4"
env_logger = "0.11"
tokio-util = { version = "0.7", features = ["io"] }
lofty = "0.22"
sha2 = "0.10"
symphonia = { version = "0.5", features = ["all"] }
open = "5"
base64 = "0.22"
